--- a/poidem-generator/build.gradle
+++ b/poidem-generator/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
     version 'IU-2020.2'
-    plugins = ['java', 'DatabaseTools']
+    plugins = ['java', 'git4idea', 'DatabaseTools']
     updateSinceUntilBuild false
 }
 
