--- a/poidem-generator/src/main/resources/META-INF/plugin.xml
+++ b/poidem-generator/src/main/resources/META-INF/plugin.xml
@@ -46,7 +46,7 @@
 
     <change-notes><![CDATA[
     <ul>
-        <li>[Add] Possibility to customize the JPA mapping</li>
+        <li>[Dell] SystemType from Job template</li>
     </ul>
     ]]></change-notes>
 
