--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,12 @@
-org.gradle.java.home = C:/Program Files/Java/jdk1.8.0_152
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.proxyPort=1080
+#systemProp.http.proxyUser=
+#systemProp.http.proxyPassword=
+#systemProp.http.nonProxyHosts=*.nonproxyrepos.com|localhost
+#
+#systemProp.https.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=1080
+#systemProp.https.proxyUser=
+#systemProp.https.proxyPassword=
+
+#ideaSdkLocalPath=C:/Users/shun/AppData/Local/JetBrains/Toolbox/apps/IDEA-C/ch-0/211.6693.111/
