fix java.lang.Throwable: Assertion failed

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -51,7 +51,7 @@
 
     <change-notes><![CDATA[
     <ul>
-        <li>delete deprecated metods</li>
+        <li>fix error "java.lang.Throwable: Assertion failed"</li>
     </ul>
     ]]></change-notes>
 
