fix deprecated method DasTypedObject.getDataType(), IU-2022.3.1

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -51,7 +51,7 @@
 
     <change-notes><![CDATA[
     <ul>
-        <li>fix error "java.lang.Throwable: Assertion failed"</li>
+        <li>fix deprecated method DasTypedObject.getDataType()</li>
     </ul>
     ]]></change-notes>
 
