--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.7.2'
+    id 'org.jetbrains.intellij' version '1.13.2'
 }
 
 group 'ru.poidem.intellij.plugins'
 version '2.1.0'
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 repositories {
     mavenLocal()
@@ -22,12 +22,12 @@ dependencies {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version 'IU-2022.3.1'
-    pluginName 'poidem-generator'
-    plugins = ['java', 'DatabaseTools', 'git4idea']
-    updateSinceUntilBuild false
+    version = 'IU-2022.3.3'
+    pluginName = 'poidem-generator'
+    plugins = ['java', 'DatabaseTools', 'Git4Idea']
+    updateSinceUntilBuild = false
 }
 
 patchPluginXml {
-    sinceBuild '223'
+    sinceBuild = '223'
 }
